@@ -3,8 +3,10 @@ package seedu.address.logic.commands;
 import static java.util.Objects.requireNonNull;
 import static seedu.address.logic.parser.CliSyntax.PREFIX_ASSESSMENT;
 import static seedu.address.logic.parser.CliSyntax.PREFIX_FILE;
+import static seedu.address.logic.parser.CliSyntax.PREFIX_GROUP;
 import static seedu.address.logic.parser.CliSyntax.PREFIX_ID;
 import static seedu.address.logic.parser.CliSyntax.PREFIX_NAME;
+import static seedu.address.model.Model.PREDICATE_SHOW_ALL_STUDENTS;
 
 import java.nio.file.Path;
 import java.util.Collections;
@@ -12,6 +14,7 @@ import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.function.Predicate;
+import java.util.stream.Collectors;
 
 import seedu.address.commons.core.Messages;
 import seedu.address.commons.core.index.Index;
@@ -19,6 +22,8 @@ import seedu.address.logic.commands.exceptions.CommandException;
 import seedu.address.model.Model;
 import seedu.address.model.student.Assessment;
 import seedu.address.model.student.AssessmentStatistics;
+import seedu.address.model.student.Group;
+import seedu.address.model.student.GroupStatistics;
 import seedu.address.model.student.ID;
 import seedu.address.model.student.IdContainsKeywordsPredicate;
 import seedu.address.model.student.Name;
@@ -34,17 +39,20 @@ public class ShowCommand extends Command {
     public static final String COMMAND_WORD = "show";
 
     public static final String MESSAGE_USAGE = COMMAND_WORD
-            + ": Shows performance analysis of a student or an assessment. "
+            + ": Shows performance analysis of a student, an assessment or a group. "
             + "Parameters: "
             + "(<index> | "
             + PREFIX_NAME + "<student_name> | "
             + PREFIX_ID + "<student_id> | "
             + PREFIX_ASSESSMENT + "<assessment_name>)"
+            + PREFIX_ASSESSMENT + "<assessment_name> | "
+            + PREFIX_GROUP + "<group_name>) "
             + "[" + PREFIX_FILE + "<export_location>]";
 
     public static final String MESSAGE_SUCCESS = "Info requested successfully";
     public static final String MESSAGE_NONEXISTENT_STUDENT = "This student does not exist.";
     public static final String MESSAGE_NONEXISTENT_ASSESSMENT = "This assessment does not exist.";
+    public static final String MESSAGE_NONEXISTENT_GROUP = "This group does not exist.";
     public static final String MESSAGE_DUPLICATE_STUDENT_NAME =
             "This student needs to be specified using INDEX or ID due to duplicate naming.";
 
@@ -52,33 +60,47 @@ public class ShowCommand extends Command {
     private Name name;
     private ID id;
     private Assessment assessment;
+    private Group group;
     private Path savePath;
 
     /**
-     * Constructor for a {@code ShowCommand}.
+     * Constructor for a {@code ShowCommand} with given {@code Index}.
      */
-    public ShowCommand(Index index, Name name, ID id, Assessment assessment, Path savePath) {
+    public ShowCommand(Index index, Path savePath) {
         setIndex(index);
+        setSavePath(savePath);
+    }
+
+    /**
+     * Constructor for a {@code ShowCommand} with given {@code Name}.
+     */
+    public ShowCommand(Name name, Path savePath) {
         setName(name);
+        setSavePath(savePath);
+    }
+
+    /**
+     * Constructor for a {@code ShowCommand} with given {@code ID}.
+     */
+    public ShowCommand(ID id, Path savePath) {
         setId(id);
+        setSavePath(savePath);
+    }
+
+    /**
+     * Constructor for a {@code ShowCommand} with given {@code Assessment}.
+     */
+    public ShowCommand(Assessment assessment, Path savePath) {
         setAssessment(assessment);
         setSavePath(savePath);
     }
 
-    public ShowCommand(Index index, Path savePath) {
-        this(index, null, null, null, savePath);
-    }
-
-    public ShowCommand(Name name, Path savePath) {
-        this(null, name, null, null, savePath);
-    }
-
-    public ShowCommand(ID id, Path savePath) {
-        this(null, null, id, null, savePath);
-    }
-
-    public ShowCommand(Assessment assessment, Path savePath) {
-        this(null, null, null, assessment, savePath);
+    /**
+     * Constructor for a {@code ShowCommand} with given {@code Group}.
+     */
+    public ShowCommand(Group group, Path savePath) {
+        setGroup(group);
+        setSavePath(savePath);
     }
 
     @Override
@@ -88,13 +110,17 @@ public class ShowCommand extends Command {
                 ? showStudentByIndex(model)
                 : getAssessment().isPresent()
                 ? showAssessment(model)
+                : getGroup().isPresent()
+                ? showGroup(model)
                 : showStudentByPrefixes(model);
     }
 
     /**
-     * Executes command when a {@code Student} info is requested by index.
+     * Executes command when a {@code Student} info is requested by an {@code Index}.
      */
     private CommandResult showStudentByIndex(Model model) throws CommandException {
+        assert getIndex().isPresent();
+
         List<Student> students = model.getFilteredStudentList();
 
         if (index.getZeroBased() >= students.size()) {
@@ -109,12 +135,13 @@ public class ShowCommand extends Command {
     }
 
     /**
-     * Executes command when a {@code Student} info is requested by name or ID.
+     * Executes command when a {@code Student} info is requested by a {@code Name} or an {@code ID}.
      */
     private CommandResult showStudentByPrefixes(Model model) throws CommandException {
-        Predicate<Student> predicate = createStudentPredicate();
-        assert predicate != null;
+        assert getName().isPresent() || getId().isPresent();
 
+        // filter student list into students with matched identity
+        Predicate<Student> predicate = createStudentPredicate();
         model.updateFilteredStudentList(predicate);
         List<Student> matchedStudents = model.getFilteredStudentList();
 
@@ -134,11 +161,14 @@ public class ShowCommand extends Command {
     }
 
     /**
-     * Executes command when a {@code Student} info is requested.
+     * Executes command when an {@code Assessment} info is requested.
      */
     private CommandResult showAssessment(Model model) throws CommandException {
         assert getAssessment().isPresent();
         Assessment matchedAssessment = model.getAssessment(assessment);
+
+        // reset filtered student list (if any) into normal list
+        model.updateFilteredStudentList(PREDICATE_SHOW_ALL_STUDENTS);
 
         if (matchedAssessment == null) {
             throw new CommandException(MESSAGE_NONEXISTENT_ASSESSMENT);
@@ -150,14 +180,47 @@ public class ShowCommand extends Command {
     }
 
     /**
-     * Creates a {@code Predicate} checking if a student has a matched name or ID.
+     * Executes command when a {@code Group} info is requested.
+     */
+    private CommandResult showGroup(Model model) throws CommandException {
+        assert getGroup().isPresent();
+        Group matchedGroup = model.getGroup(group);
+
+        if (matchedGroup == null) {
+            throw new CommandException(MESSAGE_NONEXISTENT_GROUP);
+        }
+
+        // filter student list into students in matched group
+        // (to allow easier reference to students in the interest group)
+        group = matchedGroup;
+        Predicate<Student> predicate = createStudentPredicate();
+        model.updateFilteredStudentList(predicate);
+
+        Info info = new Info(matchedGroup);
+        GroupStatistics statistics = new GroupStatistics(matchedGroup, model);
+        return new CommandResult(MESSAGE_SUCCESS, info, statistics.toLineChart(), savePath);
+    }
+
+    /**
+     * Creates a {@code Predicate} checking if a student has a matched
+     * {@code Name}, or {@code ID}, or belonging to a {@code Group}.
      */
     private Predicate<Student> createStudentPredicate() {
-        return getName().isPresent()
-                ? new NameEqualsPredicate(name.fullName)
-                : getId().isPresent()
-                ? new IdContainsKeywordsPredicate(Collections.singletonList(id.getValue()))
-                : null;
+        if (getName().isPresent()) {
+            return new NameEqualsPredicate(name.fullName);
+        }
+
+        if (getId().isPresent()) {
+            return new IdContainsKeywordsPredicate(List.of(id.toString()));
+        }
+
+        if (getGroup().isPresent()) {
+            List<String> ids = group.getStudents().stream()
+                    .map(ID::toString).collect(Collectors.toList());
+            return new IdContainsKeywordsPredicate(ids);
+        }
+
+        return null;
     }
 
     @Override
@@ -178,8 +241,9 @@ public class ShowCommand extends Command {
         boolean isNameEquals = Objects.equals(name, toCompare.name);
         boolean isIdEquals = Objects.equals(id, toCompare.id);
         boolean isAssessmentEquals = Objects.equals(assessment, toCompare.assessment);
+        boolean isGroupEquals = Objects.equals(group, toCompare.group);
 
-        return isIndexEquals && isNameEquals && isIdEquals && isAssessmentEquals;
+        return isIndexEquals && isNameEquals && isIdEquals && isAssessmentEquals && isGroupEquals;
     }
 
     public void setIndex(Index index) {
@@ -196,6 +260,10 @@ public class ShowCommand extends Command {
 
     public void setAssessment(Assessment assessment) {
         this.assessment = assessment;
+    }
+
+    public void setGroup(Group group) {
+        this.group = group;
     }
 
     public void setSavePath(Path savePath) {
@@ -218,6 +286,10 @@ public class ShowCommand extends Command {
         return Optional.ofNullable(assessment);
     }
 
+    public Optional<Group> getGroup() {
+        return Optional.ofNullable(group);
+    }
+
     public Optional<Path> getSavePath() {
         return Optional.ofNullable(savePath);
     }
@@ -226,13 +298,9 @@ public class ShowCommand extends Command {
      * Stores info of a student or an assessment.
      */
     public static class Info {
-        private Index index;
         private Student student;
         private Assessment assessment;
-
-        public Info(Index index) {
-            setIndex(index);
-        }
+        private Group group;
 
         public Info(Student student) {
             setStudent(student);
@@ -242,8 +310,8 @@ public class ShowCommand extends Command {
             setAssessment(assessment);
         }
 
-        public void setIndex(Index index) {
-            this.index = index;
+        public Info(Group group) {
+            setGroup(group);
         }
 
         public void setStudent(Student student) {
@@ -254,8 +322,8 @@ public class ShowCommand extends Command {
             this.assessment = assessment;
         }
 
-        public Optional<Index> getIndex() {
-            return Optional.ofNullable(index);
+        public void setGroup(Group group) {
+            this.group = group;
         }
 
         public Optional<Student> getStudent() {
@@ -264,6 +332,10 @@ public class ShowCommand extends Command {
 
         public Optional<Assessment> getAssessment() {
             return Optional.ofNullable(assessment);
+        }
+
+        public Optional<Group> getGroup() {
+            return Optional.ofNullable(group);
         }
 
         @Override
@@ -281,9 +353,9 @@ public class ShowCommand extends Command {
             // state check
             Info e = (Info) other;
 
-            return getIndex().equals(e.getIndex())
-                    && getStudent().equals(e.getStudent())
-                    && getAssessment().equals(e.getAssessment());
+            return getStudent().equals(e.getStudent())
+                    && getAssessment().equals(e.getAssessment())
+                    && getGroup().equals(e.getGroup());
         }
     }
 }
